--- a/packages/recipe-schema/package.json
+++ b/packages/recipe-schema/package.json
@@ -7,15 +7,19 @@
     "dist"
   ],
   "scripts": {
-    "build": "pnpm run clean && pnpm run compile",
+    "dev": "tsc-watch src/index.ts --outDir ./dist --onSuccess \"node ./dist/index.js\"",
+    "build": "yarn clean && yarn compile",
     "clean": "rimraf -rf ./dist",
     "compile": "tsc -p tsconfig.build.json",
-    "prepublishOnly": "pnpm run build"
+    "prepublishOnly": "yarn build"
   },
   "dependencies": {
-    "@nighttrax/foo": "^1.0.0"
+    "js-yaml": "^4.1.0",
+    "tsc-watch": "^4.6.1",
+    "typescript-json-schema": "^0.53.0"
   },
   "devDependencies": {
+    "@types/node": "^17.0.21",
     "rimraf": "~3.0.2",
     "typescript": "~4.6.0"
   }
