--- a/packages/layouts/package.json
+++ b/packages/layouts/package.json
@@ -1,19 +1,64 @@
 {
-  "name": "@mrpotatoes/layouts",
-  "version": "1.0.0",
-  "main": "dist/index",
-  "types": "dist/index",
-  "files": [
-    "dist"
-  ],
+  "name": "vite-react-ts",
+  "version": "0.0.0",
+  "description": "React Typescript Starter Template with Vite",
+  "author": "Malolan B. <uchihamalolan@gmail.com> (https://twitter.com/malolan12)",
+  "license": "MIT",
+  "homepage": "https://github.com/uchihamalolan/vite-react-ts",
   "scripts": {
-    "build": "pnpm run clean && pnpm run compile",
-    "clean": "rimraf -rf ./dist",
-    "compile": "tsc -p tsconfig.build.json",
-    "prepublishOnly": "pnpm run build"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "test": "jest",
+    "serve": "vite preview",
+    "prepare": "husky install",
+    "commit": "commit",
+    "format": "prettier --write --ignore-unknown .",
+    "lint": "eslint --cache ./src",
+    "analyze": "source-map-explorer 'dist/assets/*.js'"
+  },
+  "dependencies": {
+    "bulma": "^0.9.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.4"
   },
   "devDependencies": {
-    "rimraf": "~3.0.2",
-    "typescript": "~4.6.0"
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-conventional": "^16.2.1",
+    "@commitlint/prompt-cli": "^16.2.1",
+    "@testing-library/dom": "^8.11.3",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.40",
+    "@types/react-dom": "^17.0.13",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
+    "@vitejs/plugin-react": "^1.2.0",
+    "autoprefixer": "^10.4.2",
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.1.1",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.3",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-testing-library": "^5.0.6",
+    "husky": "^7.0.4",
+    "jest": "^27.5.1",
+    "lint-staged": "^12.3.5",
+    "postcss": "^8.4.8",
+    "prettier": "2.5.1",
+    "react-test-renderer": "^17.0.2",
+    "source-map-explorer": "^2.5.2",
+    "tailwindcss": "^3.0.23",
+    "ts-jest": "^27.1.3",
+    "typescript": "^4.6.2",
+    "vite": "^2.8.6",
+    "vite-tsconfig-paths": "^3.4.1"
   }
 }
