--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "ts-monorepo",
+  "name": "@mrpotatoes/untitled-lifestyle-website",
   "description": "Template for setting up a TypeScript monorepo",
   "private": true,
   "workspaces": [
     "packages/*",
-    "examples/*"
+    "libs/*",
+    "services/*",
+    "apps/*"
   ],
   "scripts": {
     "docs": "doctoc --title '**Table of content**' README.md",
-    "clean": "lerna run clean",
-    "build": "lerna run build",
-    "test": "lerna run test",
-    "pub": "lerna publish",
+    "clean:all": "pnpm run -r clean",
+    "build": "pnpm run -r build",
+    "test": "pnpm run -r test",
     "lint": "eslint --ext js,ts,tsx ."
   },
   "devDependencies": {
-    "@nighttrax/eslint-config-tsx": "~10.0.0-beta.0",
-    "doctoc": "~2.1.0",
-    "eslint": "~8.10.0",
-    "eslint-plugin-import": "~2.25.0",
-    "lerna": "~4.0.0",
-    "typescript": "~4.6.0"
+    "@nighttrax/eslint-config-tsx": "~11.0.0",
+    "doctoc": "~2.2.0",
+    "eslint": "~8.28.0",
+    "eslint-plugin-import": "~2.26.0",
+    "typescript": "~4.9.0"
   }
 }
