--- a/packages/recipe-schema/package.json
+++ b/packages/recipe-schema/package.json
@@ -7,11 +7,12 @@
     "dist"
   ],
   "scripts": {
-    "build": "yarn clean && yarn compile",
-    "clean": "rimraf -rf ./dist",
+    "build": "pnpm clean && pnpm compile",
+    "clean": "pnpm -rf ./dist",
+    "clean:all": "rm -rf ./dist node_modules",
     "compile": "tsc -p tsconfig.build.json",
     "dev": "tsc-watch src/index.ts --outDir ./dist --onSuccess \"node ./dist/index.js\"",
-    "prepublishOnly": "yarn build",
+    "prepublishOnly": "pnpm build",
     "tests": "echo not yet",
     "tests:watch": "echo not yet"
   },
@@ -21,8 +22,7 @@
     "typescript-json-schema": "^0.53.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.21",
-    "rimraf": "~3.0.2",
+    "@types/node": "^17.0.45",
     "typescript": "~4.6.0"
   }
 }
