--- a/packages/schema-metadata/package.json
+++ b/packages/schema-metadata/package.json
@@ -8,15 +8,14 @@
   ],
   "scripts": {
     "build": "pnpm run clean && pnpm run compile",
-    "clean": "rimraf -rf ./dist",
+    "clean": "rm -rf ./dist",
     "compile": "tsc -p tsconfig.build.json",
     "prepublishOnly": "pnpm run build"
   },
   "dependencies": {
-    "@nighttrax/foo": "^1.0.0"
+    
   },
   "devDependencies": {
-    "rimraf": "~3.0.2",
     "typescript": "~4.6.0"
   }
 }
