--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -8,7 +8,9 @@
     "noEmitOnError": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "types": [],
+    "types": [
+      "node"
+    ],
     "jsx": "react",
     "noEmit": false
   },
