--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@nighttrax/components/*": ["packages/components/src/*"],
-      "@nighttrax/*": ["packages/*/src"]
+      // "@nighttrax/components/*": ["packages/components/src/*"],
+      "@mrpotatoes/*": ["packages/*/src"]
     },
     "noEmit": true
   }
