--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint --ext js,ts,tsx .",
     "test": "pnpm run -r test",
     "reinstall": "clear; yarn clean:all; pnpm install; size node_modules/",
-    "serve:client": "cd apps/recipe-test.co; pnpm dev"
+    "serve:demo": "cd apps/schema-demo.co; pnpm dev"
   },
   "devDependencies": {
     "@nighttrax/eslint-config-tsx": "~11.0.0",
